--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <nav>
         <a href="/index.html">Inicio</a>
-        <a href="/lista.html">Lista</a>
+        <a href="lista.html">Lista</a>
       </nav>
     </header>
     <main>
