--- a/lista.html
+++ b/lista.html
@@ -12,8 +12,8 @@
 <body>
     <header>
         <nav>
-          <a href="/index.html">Inicio</a>
-          <a href="/lista.html">Lista</a>
+          <a href="./index.html">Inicio</a>
+          <a href="./lista.html">Lista</a>
         </nav>
       </header>
       <main>
