--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <link rel="stylesheet" href="style.css" />
     <script src="index.js" defer></script>
     <script src="./canciones.js"></script>
+    <link rel="icon" href="./imagenes/Icon.png">
     <title>Acordes guitarra</title>
   </head>
   <body>
     <header>
       <nav>
         <a href="./index.html">Inicio</a>
+        <img src="./imagenes/Icon.png" alt="">
         <a href="./lista.html">Lista</a>
       </nav>
     </header>
