--- a/lista.html
+++ b/lista.html
@@ -7,16 +7,18 @@
     <link rel="stylesheet" href="style.css">
     <script src="./index.js" defer></script>
     <script src="./canciones.js"></script>
+    <link rel="icon" href="./imagenes/Icon.png">
     <script src="https://kit.fontawesome.com/5e9b432c2e.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <nav>
           <a href="./index.html">Inicio</a>
+          <img src="./imagenes/Icon.png" alt="">
           <a href="./lista.html">Lista</a>
         </nav>
       </header>
-      <main>
+      <main id="main-lista">
         <p class="centrado">Canciones</p>
         <div id="contenedor-canciones-lista">
       </div>
