--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="style.css" />
     <script src="index.js" defer></script>
     <script src="./canciones.js"></script>
-    <link rel="icon" href="./imagenes/Icon.png">
+    <link rel="icon" href="./imagenes/Icon.png" />
     <title>Acordes guitarra</title>
   </head>
   <body>
     <header>
       <nav>
         <a href="./index.html">Inicio</a>
-        <img src="./imagenes/Icon.png" alt="">
+        <img src="./imagenes/Icon.png" alt="" />
         <a href="./lista.html">Lista</a>
       </nav>
     </header>
@@ -27,13 +27,10 @@
           <option value="">Botas Locas</option>
         </select>
       </div>
-      <div id="conteiner-musica" class="escondido">
-      </div>
+      <div id="conteiner-musica" class="escondido"></div>
       <div id="conteiner-acordes" class="escondido">
         <p>Acordes</p>
-        <div id="conteiner-acordes">
-          
-        </div>
+        <div id="conteiner-acordes"></div>
       </div>
     </main>
   </body>
