--- a/lista.html
+++ b/lista.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lista de canciones</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="./index.js" defer></script>
+    <script src="./lista.js" defer></script>
     <script src="./canciones.js"></script>
     <link rel="icon" href="./imagenes/Icon.png" />
     <script
