--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script src="./index.js" defer></script>
+    <script src="./lista.js" defer></script>
     <script src="./canciones.js"></script>
     <link rel="icon" href="./imagenes/Icon.png" />
     <title>Acordes guitarra</title>
@@ -19,19 +19,12 @@
     </header>
     <main>
       <div id="conteiner-selector">
-        <select name="select" id="select" placeholder="sodifhodi">
-          <option value="">Elegi la cancion</option>
-          <option value="">Canción Para Muerte</option>
-          <option value="">Aprendizaje</option>
-          <option value="">Alto En La Torre</option>
-          <option value="">Botas Locas</option>
+        <select name="select" id="select">
+          <option value="">Elige La Cancion</option>
         </select>
       </div>
-      <div id="conteiner-musica" class="escondido"></div>
-      <div id="conteiner-acordes" class="escondido">
-        <p>Acordes</p>
+        <p class="centrado">Acordes</p>
         <div id="conteiner-acordes"></div>
-      </div>
     </main>
   </body>
 </html>
